syntax = "proto3";
package userRpc;
option go_package="api/protobuf-spec/user";

message UserReq {
    int32 user_id = 1;
}

message UserResp {
    string user_name = 1;
}

service MainService {
    rpc GetUserName(UserReq) returns (UserResp);
}